--- a/application/raptor/user/user-set-role-modal.html
+++ b/application/raptor/user/user-set-role-modal.html
@@ -7,7 +7,7 @@
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
         <div class="modal-body">
-            <form autocomplete="off" id="set_user_role" role="form" action="{{ 'users-set-role'|link ~ '?id=' ~ profile['id'] }}" method="POST" enctype="multipart/form-data">
+            <form autocomplete="off" id="set_user_role" role="form" action="{{ 'user-set-role'|link ~ '?id=' ~ profile['id'] }}" method="POST" enctype="multipart/form-data">
                 <div style="height:400px;overflow-y:auto;overflow-x:hidden;">
                     <div class="form-group">
                         <label>{{ profile['first_name'] ~ ' ' ~ profile['last_name'] ~ ' (' ~ profile['username'] ~ ' => ' ~ profile['email'] ~ ')' }} хэрэглэгчийн дүрийг сонгон тохируулна уу!</label>
