--- a/application/dashboard/home/home.html
+++ b/application/dashboard/home/home.html
@@ -13,3 +13,6 @@ function getGreeting() {
 }
 document.getElementById('hello').innerHTML = `${getGreeting()} <strong>{{ user.profile['first_name'] }}</strong>.<br/>Welcome to codesaur framework!`;
 </script>
+<div>
+    {{ content }}
+</div>
