--- a/application/raptor/authentication/login.html
+++ b/application/raptor/authentication/login.html
@@ -74,7 +74,7 @@
             </form>
             
             <form class="d-none" id="forgot" action="{{ 'login-forgot'|link }}" method="POST">
-                <h3 class="text-center mb-4">{{ 'forgotten-password-reset'|text }}</h3>
+                <h3 class="text-center mb-4">{{ 'password-reset'|text }}</h3>
                 <span>{{ 'enter-email-below'|text }}</span>
                 <div class="form-floating mt-2">
                     <input class="form-control" type="email" placeholder="{{ 'email'|text|e }}" name="codeForgetEmail" id="codeForgetEmail" autocomplete="off">
