--- a/application/raptor/organization/organization-retrieve-modal.html
+++ b/application/raptor/organization/organization-retrieve-modal.html
@@ -6,7 +6,7 @@
         </div>
         <div class="modal-body">
             <div class="row">
-                <label class="col-3 col-form-label text-end">{{ 'id'|text }}</label>
+                <label class="col-3 col-form-label text-end">ID</label>
                 <div class="col-9">
                     <input class="form-control" disabled value="{{ record['id'] }}" type="text">
                 </div>
