--- a/application/raptor/user/forgot-index-modal.html
+++ b/application/raptor/user/forgot-index-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-info text-uppercase">
-                <i class="bi bi-shield-lock-fill"></i> {{ 'password-reset-request'|text }}
+                <i class="bi bi-shield-lock-fill"></i> {{ 'password-reset'|text }}
             </h3>
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
