--- a/application/raptor/user/user-set-password-modal.html
+++ b/application/raptor/user/user-set-password-modal.html
@@ -2,14 +2,17 @@
     <div class="modal-content">
         <div class="modal-header">
             <h3 class="modal-title fs-6">
-                <i class="bi bi-key-fill"></i> {{ 'password'|text }}
+                <i class="bi bi-key-fill"></i> {{ 'password-reset'|text }}
             </h3>
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
         <div class="modal-body">
-            <form autocomplete="off" id="set_user_role" role="form" action="{{ 'user-set-password'|link ~ '?id=' ~ profile['id'] }}" method="POST" enctype="multipart/form-data">
+            <form autocomplete="off" id="set_user_password" role="form" action="{{ 'user-set-password'|link({'id':profile['id']}) }}" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label>Хэрэглэгчийн шинэ нууц үгийг тохируулна уу!</label>
+                    <label>{{ 'username'|text }}: <strong>{{ profile['username'] }}</strong> ({{ profile['first_name'] }} {{ profile['last_name'] }})</label>
+                    <label class="mt-3">{{ 'set-new-password'|text }}</label>
+                    <input class="form-control mt-3 mb-2" required type="password" placeholder="{{ 'new-password'|text|e }}" name="password" autocomplete="password_new-complete">
+                    <input class="form-control mb-3" required type="password" placeholder="{{ 'retype-new-password'|text|e }}" name="password_retype" autocomplete="password_retype-complete">
                 </div>
             </form>
         </div>
@@ -24,5 +27,53 @@
     </div>
 </div>
 <script type="text/javascript">
+    const passwordForm = document.querySelector('form#set_user_password');
+    if (!passwordForm) {
+        NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
+    } else {
+        const submitter = document.querySelector('button.submit-password');
+        submitter.addEventListener('click', function (e) {
+            e.preventDefault();
+            passwordForm.requestSubmit();
+        });
 
+        passwordForm.addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const _valid = this.checkValidity();
+            this.classList.add('was-validated');
+            if (!_valid) {
+                event.stopPropagation();
+                return NotifyTop('danger', `{{ 'error'|text|e }}`, `{{ 'u-have-some-form-errors'|text|e }}`);
+            }
+
+            submitter.growNstop();
+
+            const data = new FormData(this);
+            fetch(
+                this.action,
+                {
+                    body: data,
+                    method: this.getAttribute('method') ?? 'POST'
+                }
+            ).then(res => {
+                let contentType = res.headers.get('content-type');
+                if (contentType.indexOf('application/json') !== -1) {
+                    return res.json();
+                }
+                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
+            }).then(response => {
+                if (response.status !== 'success') {
+                    throw new Error(response.message ? response.message : 'Invalid response!');
+                }
+
+                window.location.reload();
+
+                NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'User password set');
+            }).catch(error => {
+                NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
+                submitter.growNstop();
+            });
+        });
+    }
 </script>
