--- a/application/raptor/user/user-index.html
+++ b/application/raptor/user/user-index.html
@@ -8,7 +8,7 @@
     <div class="btn-group ms-auto">
         {% if user.can('system_user_index') %}
             <a class="btn btn-sm btn-outline-info btn-users d-none shadow-sm" href="{{ 'user-requests-modal'|link({'table': 'forgot'}) }}" data-bs-target="#static-modal" data-bs-toggle="modal">
-                {{ 'password-reset-request'|text }}
+                {{ 'password-reset'|text }}
             </a>
             <a class="btn btn-sm btn-outline-primary btn-users d-none shadow-sm" href="{{ 'user-requests-modal'|link({'table': 'signup'}) }}" data-bs-target="#static-modal" data-bs-toggle="modal">
                 {{ 'request-new-user'|text }}
@@ -32,7 +32,7 @@
                     {title: `{{ 'photo'|text|e }}`},
                     {title: `{{ 'user'|text|e }}`},
                     {title: `{{ 'organization'|text|e }}`},
-                    {title: `{{ 'role2'|text|e }}`},
+                    {title: `{{ 'role'|text|e }}`},
                     {title: `{{ 'action'|text|e }}`, style: 'width:10rem'}
                 ]
             }
@@ -52,16 +52,16 @@
             }
 
             let rowsHTML = '';
+            let deactivated_title = document.documentElement.lang === 'mn' ? 'устгагдсан' : 'deactivated';
             let indexLink = `{{ 'users'|link }}`;
             let orgIndexLink = `{{ 'organizations'|link }}`;
-            let isSystemCoder = `{{ user.is('system_coder') ? 'true' : '' }}`;
             let canUpdate = `{{ user.can('system_user_update') ? 'true' : '' }}`;
             let canDelete = `{{ user.can('system_user_delete') ? 'true' : '' }}`;
-            let orgUserLink = `{{ 'user-set-organization'|link ~ '?user_id=' }}`;
-            let setPasswordLink = `{{ 'user-set-password'|link ~ '?id=' }}`;
-            let setRoleLink = `{{ 'user-set-role'|link ~ '?id=' }}`;
+            let canSetOrg = `{{ user.can('system_user_organization_set') ? 'true' : '' }}`;
+            let canSetRole = `{{ user.can('system_rbac') ? 'true' : '' }}`;
             let rbacRoleViewLink = `{{ 'rbac-role-view'|link }}`;
-            let deactivated_title = document.documentElement.lang === 'mn' ? 'устгагдсан' : 'deactivated';
+            let authSystemCoder = `{{ user.is('system_coder') ? 'true' : '' }}`;
+            let authUserId = {{ user.profile.id }};
             data.list.forEach(profile => {
                 let photo;
                 if (profile.photo) {
@@ -84,32 +84,37 @@
                     usernameInfo += `<div style="font-size:.8rem;"><a class="text-decoration-none" href="tel:${profile.phone}"><i class="bi bi-telephone"></i></a> ${profile.phone}</div>`;
                 }
 
-                let isCoder = Object.values(profile.roles ?? []).includes('system_coder');
-                let orgUserHtml = !orgUserLink ? ''
-                    : `<a class="ajax-modal btn btn-dark btn-sm shadow-sm mb-1" style="--bs-btn-font-size:.7rem;" href="${orgUserLink}${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-bank"></i></a>`;
-                if (isCoder) {
+                let hasSystemCoder = Object.values(profile.roles ?? []).includes('system_coder');
+                
+                let orgUserHtml = '';
+                if (canSetOrg && profile.is_active > 0) {
+                    orgUserHtml += `<a class="ajax-modal btn btn-dark btn-sm shadow-sm mb-1" style="--bs-btn-font-size:.7rem;" href="${indexLink}/set/organization/${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-bank"></i></a>`;
+                }                
+                if (hasSystemCoder) {
                     orgUserHtml += ' <span class="badge bg-secondary fw-normal shadow-sm">system_coder can enter any organization</span><br/>';
                 }
                 profile.organizations?.forEach(org => {
                     orgUserHtml += ` <a class="ajax-modal badge text-bg-light text-decoration-none ${org.alias === 'system' ? '' : 'fw-normal '}shadow-sm" href="${orgIndexLink}/view/${org.id}" data-bs-target="#static-modal" data-bs-toggle="modal">${org.name}</a>`;
                 });
 
-                let rolesHtml = !setRoleLink ? ''
-                    : `<a class="ajax-modal btn btn-sm btn-dark shadow-sm mb-1" style="--bs-btn-font-size:.7rem;" href="${setRoleLink}${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-shield-fill-check"></i></a>`;
-                if (isCoder) {
+                let rolesHtml = '';
+                if (canSetRole && profile.is_active > 0) {
+                    rolesHtml += `<a class="ajax-modal btn btn-sm btn-dark shadow-sm mb-1" style="--bs-btn-font-size:.7rem;" href="${indexLink}/set/role/${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-shield-fill-check"></i></a>`;
+                }
+                if (hasSystemCoder) {
                     rolesHtml += ' <span class="badge bg-secondary fw-normal shadow-sm">system_coder can do all the actions</span><br/>';
                 }
-                for (let role_id in profile.roles ?? []) {
-                    rolesHtml += ` <a class="ajax-modal badge text-bg-light text-decoration-none ${profile.roles[role_id] === 'system_coder' ? '' : 'fw-normal '}shadow-sm" href="${rbacRoleViewLink}?role=${profile.roles[role_id]}" data-bs-target="#static-modal" data-bs-toggle="modal">${profile.roles[role_id]}</a>`;
-                }
-
+                profile.roles?.forEach(role => {
+                    rolesHtml += ` <a class="ajax-modal badge text-bg-light text-decoration-none ${role === 'system_coder' ? '' : 'fw-normal '}shadow-sm" href="${rbacRoleViewLink}?role=${role}" data-bs-target="#static-modal" data-bs-toggle="modal">${role }</a>`;
+                });
+                
                 let buttons = [`<a class="btn btn-sm btn-info mt-1 shadow-sm" href="${indexLink}/view/${profile.id}"><i class="bi bi-eye"></i></a>`];
                 if (profile.is_active > 0) {
                     if (canUpdate) {
                         buttons.push(`<a class="btn btn-sm btn-primary mt-1 shadow-sm" href="${indexLink}/update/${profile.id}"><i class="bi bi-pencil-square"></i></a>`);
                     }
-                    if (isSystemCoder) {
-                        buttons.push(`<a class="ajax-modal btn btn-sm btn-dark mt-1 shadow-sm" href="${setPasswordLink}${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-key-fill"></i></a>`);
+                    if (profile.id === authUserId || authSystemCoder) {
+                        buttons.push(`<a class="ajax-modal btn btn-sm btn-dark mt-1 shadow-sm" href="${indexLink}/set/password/${profile.id}" data-bs-target="#static-modal" data-bs-toggle="modal"><i class="bi bi-key-fill"></i></a>`);
                     }
                     if (canDelete) {
                         buttons.push(`<button class="deactivate-user btn btn-sm btn-danger mt-1 shadow-sm" type="button" value="${profile.id}"><i class="bi bi-trash"></i></button>`);
