--- a/application/raptor/user/user-set-organization-modal.html
+++ b/application/raptor/user/user-set-organization-modal.html
@@ -5,7 +5,7 @@
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
         <div class="modal-body">
-            <form autocomplete="off" id="organization_user_set" role="form" action="{{ 'user-set-organization'|link ~ '?user_id=' ~ profile['id'] }}" method="POST" enctype="multipart/form-data">
+            <form autocomplete="off" id="set_user_organization" role="form" action="{{ 'user-set-organization'|link({'id':profile['id']}) }}" method="POST" enctype="multipart/form-data">
                 <div style="height:400px;overflow-y:auto;overflow-x:hidden;">
                     <div class="form-group">
                         <label>{{ profile['first_name'] ~ ' ' ~ profile['last_name'] ~ ' (' ~ profile['username'] ~ ' => ' ~ profile['email'] ~ ')' }} хэрэглэгчийн харъяалагдах байгууллагыг сонгон тохируулна уу!</label>
@@ -34,17 +34,17 @@
         new Choices(userOrgs, {removeItemButton: true});
     }
     
-    const formSet = document.querySelector('form#organization_user_set');
-    if (!formSet) {
+    const userOrgsForm = document.querySelector('form#set_user_organization');
+    if (!userOrgsForm) {
         NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
     } else {
         const submitter = document.querySelector('button.submit-set-organization');
         submitter.addEventListener('click', function (e) {
             e.preventDefault();
-            formSet.requestSubmit();
+            userOrgsForm.requestSubmit();
         });
 
-        formSet.addEventListener('submit', function (event) {
+        userOrgsForm.addEventListener('submit', function (event) {
             event.preventDefault();
 
             const _valid = this.checkValidity();
