--- a/application/raptor/user/user-update.html
+++ b/application/raptor/user/user-update.html
@@ -1,4 +1,4 @@
-{% set can_update = user.can('system_user_update') or (user.profile['id'] == record['id']) %}
+{% set can_update_me = user.can('system_user_update') or (user.profile['id'] == record['id']) %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
 <script defer src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 <div class="d-flex flex-wrap justify-content-between align-items-center text-uppercase rounded p-1 mb-2 shadow">
@@ -6,14 +6,16 @@
         <i class="bi bi-person-lines-fill"></i> {{ record['first_name'] ~ ' ' ~ record['last_name'] }}
     </h3>
     <div class="ms-auto">
-        {% if can_update %}
+        {% if can_update_me %}
             <button class="submit-update btn btn-sm btn-primary text-uppercase shadow-sm">
                 <i class="bi bi-check"></i> {{ 'submit'|text }}
             </button>
         {% endif %}
+        {% if user.can('system_user_index') %}
         <a class="btn btn-sm btn-secondary shadow-sm" href="{{ 'users'|link }}">
             <i class="bi bi-arrow-left"></i> {{ 'users'|text }}
         </a>
+        {% endif %}
     </div>
 </div>
 <ul class="nav nav-tabs mt-1" role="tablist">
@@ -78,7 +80,7 @@
                 </select>
             {% endif %}
             {% if user.can('system_rbac') %}
-                <label class="mt-1">{{ 'role2'|text }}</label>
+                <label class="mt-1">{{ 'role'|text }}</label>
                 <div class="form-text" id="roleHelpBlock">хэрэглэгчийн дүрийг сонгон тохируулна уу</div>
                 <select class="form-control" multiple name="roles[]" id="roles" aria-describedby="roleHelpBlock">
                     {% for key,data in roles %}
@@ -94,14 +96,16 @@
     </div>
 </form>
 <div class="rounded p-2 mt-3 shadow">
-    {% if can_update %}
+    {% if can_update_me %}
         <button class="submit-update btn btn-primary text-uppercase shadow-sm">
             <i class="bi bi-check"></i> {{ 'submit'|text }}
         </button>
     {% endif %}
+    {% if user.can('system_user_index') %}
     <a class="btn btn-secondary text-uppercase shadow-sm" href="{{ 'users'|link }}">
         <i class="bi bi-arrow-left"></i> {{ 'users'|text }}
     </a>
+    {% endif %}
 </div>
 <script type="text/javascript">
     const onFileInput = function (fileInput) {
@@ -218,7 +222,11 @@
                         throw new Error(response.message ? response.message : 'Invalid response!');
                     }
 
-                    window.location.href = `{{ 'users'|link }}`;
+                    {% if user.can('system_user_index') %}
+                        window.location.href = `{{ 'users'|link }}`;
+                    {% else %}
+                        window.location.href = `{{ 'home'|link }}`;
+                    {% endif %}
 
                     NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'User updated');
                 }).catch(error => {
